--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "pinia": "^2.0.11",
+    "qrcode": "^1.5.0",
     "quasar": "^2.6.0",
     "stripe": "^8.219.0",
     "vue": "^3.0.0",
