--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.0.11",
     "qrcode": "^1.5.0",
     "quasar": "^2.6.0",
+    "socket.io-client": "^4.5.0",
     "stripe": "^8.219.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
